# NIME-bibliography

./: .gitignore  Makefile  README.md  generate_combined_files.sh  nime_installations2008.bib  nime_music2008.bib  pyproject.toml
BibTeX/: nime.bib  nime2001.bib  nime2002.bib  nime2003.bib  nime2004.bib  nime2005.bib  nime2006.bib  nime2007.bib  nime2008.bib  nime2009.bib  nime2010.bib  nime2011.bib  nime2012.bib  nime2013.bib  nime2014.bib  nime2015.bib  nime2016.bib  nime2016_arj.bib  nime2017.bib  nime2018.bib  nime2019.bib  nime2019_music.bib
PDF_scraping/: README.md  TODO.txt  addpdf.py  bibtexparser.py  bibtextest.py  manualbibparser.py  pdfextractor.py  pdfextractor_oldmethod.py  renamer.py  result.xml  result_cleaned.xml  resultcleaner.py  stats.txt  sum_correct.py  tester.py
Zenodo/: NIME_dois.txt  NIME_upload.py
alt_proceedings/: nime2026_alt.bib
installation_proceedings/: nime2008_installations.bib  nime2009_installations.bib  nime2011-installations.bib.sav  nime2011_installations.bib  nime2012_installations.bib  nime2021_installations.bib  nime2022_installations.bib  nime2023_installations.bib  nime2024_installations.bib  nime_installations.bib
music_proceedings/: NIMEconcerts_2016.bib  nime2008_music.bib  nime2010_music.bib  nime2011-music.bib  nime2011_music.bib  nime2012_music.bib  nime2016_music.bib  nime2019_music.bib  nime2020_music.bib  nime2021_music.bib  nime2022_music.bib  nime2023_music.bib  nime2024_music.bib  nime2025_music.bib  nime2026_music.bib  nime_concerts2010.bib  nime_music.bib
nime-bib/: pyproject.toml
nime_bib/: __main__.py  (+3 more)
(+81 files in other folders)
