[tool.poetry]
name = "nime-bib"
version = "0.1.0"
description = "Software for managing the NIME proceedings archive."
authors = ["Charles Martin <cpm@charlesmartin.com.au>"]

[tool.poetry.dependencies]
python = "^3.9"
bibtexparser = "^1.3.0"
click = "^8.1.3"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
