[tool.poetry]
name = "nime-bib"
version = "0.1.0"
description = "Software for managing the NIME proceedings archive."
authors = ["Charles Martin <cpm@charlesmartin.com.au>"]

[tool.poetry.dependencies]
python = "^3.9"
bibtexparser = {git = "https://github.com/sciunto-org/python-bibtexparser", rev = "v2"}
click = "^8.1.3"
pandas = "^2.0.0"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
